--- a/web-frontend/modules/builder/locales/en.json
+++ b/web-frontend/modules/builder/locales/en.json
@@ -232,11 +232,11 @@
         "noDataSourceTitle": "You have not yet added a data",
         "noDataSourceMessage": "Data can be used to fetch from internal or external sources and display it on the page."
     },
-    "styleSidePanel": {
-        "paddingTop": "Padding top",
-        "paddingBottom": "Padding bottom"
-    },
     "styleForm": {
+        "boxTop": "Padding top",
+        "boxBottom": "Padding bottom"
+    },
+    "styleBoxForm": {
         "paddingError": "The value must be an integer between 0 and 200."
     }
 }
