--- a/web-frontend/modules/core/locales/en.json
+++ b/web-frontend/modules/core/locales/en.json
@@ -144,6 +144,7 @@
     "workspaceContext": {
         "renameWorkspace": "Rename workspace",
         "members": "Members",
+        "auditLog": "Audit log",
         "viewTrash": "View trash",
         "leaveWorkspace": "Leave workspace",
         "deleteWorkspace": "Delete workspace"
