--- a/web-frontend/modules/core/locales/en.json
+++ b/web-frontend/modules/core/locales/en.json
@@ -562,6 +562,6 @@
         "daily": "Daily",
         "weekly": "Weekly",
         "never": "Never",
-        "submitButton": "Save"
+        "submitButton": "Update frequency"
     }
 }
